--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+.buttons {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 12px 18px;
+  margin: 12px 4px;
+  justify-content: center;
+}
+
 .btn {
   display: flex;
   font-family: "Roboto", sans-serif;
@@ -8,11 +17,16 @@
   font-weight: bold;
   border-radius: 50%;
   background-color: #ffa31a;
-  color: white;
+  color: whitesmoke;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   border: 0;
+}
+
+.btn:hover {
+  border: 1px solid whitesmoke;
+  transform: scale(1.1);
 }
 
 .btn.op {
@@ -32,40 +46,54 @@
 }
 
 .btn.zero {
-    display: flex;
-    width: 140px;
-    border-radius: 48px;
-    justify-content:flex-start;
-    padding-left: 24px;
+  display: flex;
+  width: 140px;
+  border-radius: 48px;
+  justify-content: flex-start;
+  padding-left: 24px;
 }
 
 body {
   display: flex;
   justify-content: center;
+  margin-top: 24px;
   background-color: lightslategray;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   background-color: black;
   width: 350px;
-  height: 700px;
+  height: 650px;
   border-radius: 40px;
+  box-shadow: 5px 10px slategrey;
 }
 
 .display {
+  font-family: "Roboto", sans-serif;
+  font-size: large;
   display: flex;
-  height: 200px;
+  flex-direction: column;
   justify-content: center;
+  height: 200px;
 }
 
-.buttons {
+.display .bottom,
+.display .top {
   display: flex;
-  width: 100%;
+  justify-content: flex-end;
+  align-items: flex-end;
   flex-wrap: wrap;
-  gap: 12px 18px;
-  margin: 12px 8px;
-  justify-content: center;
+  /* border: 1px solid white; */
+  height: 45%;
+  color: whitesmoke;
+  font-weight: normal;
+  font-size: 2em;
+  padding: 12px 32px;
+}
+
+.display .top {
+    font-size:3rem;
 }
