--- a/style.css
+++ b/style.css
@@ -25,8 +25,22 @@
 }
 
 .btn:hover {
-  border: 1px solid whitesmoke;
   transform: scale(1.1);
+  box-shadow: 0px 5px 15px rgba(245, 245, 245, 0.6);
+}
+
+.danger:hover {
+  background-color: rgba(255, 42, 38, 0.9) !important;
+}
+
+.btn.op:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 5px 15px rgba(255, 120, 26, 0.8);
+}
+
+.btn.num:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 5px 15px rgba(148, 148, 148, 0.8);
 }
 
 .btn.op {
@@ -68,7 +82,7 @@ body {
   width: 350px;
   height: 650px;
   border-radius: 40px;
-  box-shadow: 5px 10px slategrey;
+  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.5);
 }
 
 .display {
@@ -90,10 +104,10 @@ body {
   height: 45%;
   color: whitesmoke;
   font-weight: normal;
-  font-size: 2em;
+  font-size: 2.5em;
   padding: 12px 32px;
 }
 
 .display .top {
-    font-size:3rem;
+  font-size: 3.5rem;
 }
