--- a/style.css
+++ b/style.css
@@ -29,8 +29,12 @@
   box-shadow: 0px 5px 15px rgba(245, 245, 245, 0.6);
 }
 
+.btn:active {
+  transform: translateY(4px) !important ;
+}
+
 .danger:hover {
-  background-color: rgba(255, 42, 38, 0.9) !important;
+  background-color: rgba(240, 40, 30, 1) !important;
 }
 
 .btn.op:hover {
